--- a/hibpract/.settings/org.eclipse.wst.common.component
+++ b/hibpract/.settings/org.eclipse.wst.common.component
@@ -2,5 +2,6 @@
     <wb-module deploy-name="hibpract">
         <wb-resource deploy-path="/" source-path="/src"/>
         <wb-resource deploy-path="/" source-path="/config"/>
+        <wb-resource deploy-path="/" source-path="/test"/>
     </wb-module>
 </project-modules>
