--- a/mvcpract/.settings/org.eclipse.wst.common.component
+++ b/mvcpract/.settings/org.eclipse.wst.common.component
@@ -4,9 +4,7 @@
         <wb-resource deploy-path="/" source-path="/WebContent"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-        <dependent-module archiveName="hibpract.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/hibpract/hibpract">
-            <dependency-type>uses</dependency-type>
-        </dependent-module>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/test"/>
         <property name="java-output-path" value="/mvcpract/build/classes"/>
         <property name="context-root" value="mcvpract"/>
     </wb-module>
