Added filter to check login (though currently it does nothing)

--- a/mvcpract/.settings/org.eclipse.wst.common.component
+++ b/mvcpract/.settings/org.eclipse.wst.common.component
@@ -5,6 +5,9 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/test"/>
+        <dependent-module archiveName="hibpract.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/hibpract/hibpract">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="java-output-path" value="/mvcpract/build/classes"/>
         <property name="context-root" value="mcvpract"/>
     </wb-module>
